# StoryCanon

./: .env.example  .gitignore  DEMO.md  Dockerfile  ISSUES.md  README.md  docker-compose.yml  supermemory.env.example
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  llm.py  main.py  memory.py  models.py  pipeline.py  prompts.py
backend/scripts/: check_extractor.py
backend/tests/: test_dedupe.py  test_parsing.py  test_pipeline.py  test_prompts.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/editor/: page.tsx
frontend/src/components/: CanonGraph.tsx  Cast.tsx  ContinuityPanel.tsx  FactCard.tsx  ManuscriptEditor.tsx  Sidebar.tsx  StoryBible.tsx  ThemeToggle.tsx  TopBar.tsx  Workspace.tsx
frontend/src/lib/: api.ts  contradiction-mark.ts  mock-data.ts  types.ts
